@@ -1,5 +1,9 @@
 2008-05-26  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* libtiff/tif_win32.c: Replace custom Win32 memory api with generic
+	POSIX one.  No apparent value to use of GlobalAlloc() in the modern
+	age.  http://bugzilla.maptools.org/show_bug.cgi?id=1885
+
 	* libtiff/tiffconf.vc.h: Added JBIG_SUPPORT and MDI_SUPPORT items
 	in windows version (care of Edward Lam).
 
